<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailactivity.DetailMovieActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivPosterHeader"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <ImageView
                    android:id="@+id/ivPosterDetail"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:scaleType="fitXY"
                    tools:ignore="MissingConstraints"
                    tools:src="@tools:sample/avatars" />

                <com.google.android.material.button.MaterialButton
                    app:icon="@drawable/ic_baseline_play_arrow_24"
                    app:iconSize="45dp"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    app:cornerRadius="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/titleDetail"/>
            <TextView
                android:id="@+id/tvTitleDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:textSize="14sp"
                android:layout_marginTop="6dp"
                android:text="@string/title_disini"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:text="@string/overview"/>
            <TextView
                android:id="@+id/tvOverviewDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:textSize="14sp"
                android:layout_marginTop="6dp"
                android:text="@string/overview_disini"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/relase_date"/>
            <TextView
                android:id="@+id/tvReleaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:textSize="14sp"
                android:layout_marginTop="6dp"
                android:text="@string/overview_disini"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="@color/gray"
                android:layout_marginTop="32dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/popularity"/>
                    <TextView
                        android:id="@+id/tvPopularity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/popularity_disini"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginTop="16dp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/ratingDetail"/>
                    <RatingBar
                        android:id="@+id/rbMovieDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:numStars="10"
                        android:stepSize="0.1"
                        style="@style/Widget.AppCompat.RatingBar.Small"/>
                    <TextView
                        android:id="@+id/tvRatingDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/rating_disini"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginTop="18dp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/voted_by_viewers"/>
                    <TextView
                        android:id="@+id/tvJumlahUsers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/jumlah_user_disini"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>